update css files

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+* { margin: 0; padding: 0; border: 0; font-size: 100%; }
 @charset "utf-8";
 #my-class {
     color: red;
@@ -5,6 +6,7 @@
     background-color: lightblue;
     padding: 0.5cm;
     text-align: center;
+	background-image: url("../images/bunchofbooks.jpg")
 
 }
 .my-paragraph {
