--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,28 @@
 * { margin: 0; padding: 0; border: 0; font-size: 100%; }
-@charset "utf-8";
 #my-class {
-    color: red;
-    border: 1px solid blue;
-    background-color: lightblue;
+    color: orangered;
+    border: 1px solid orangered;
+    background-color: orangered;
     padding: 0.5cm;
     text-align: center;
 	background-image: url("../images/bunchofbooks.jpg")
-
+	
 }
 .my-paragraph {
     padding-top: 10px;
     padding-right: 10px;
     padding-left: 10px;
     padding-bottom: 10px;
-    color: black;
+    color: orange;
     border: 1px solid #FF5F00;
-    background-color: orange;
+    background-color: blue;
     text-align: center;
 }
 .my-name {
-    color: white;
+    color: black;
     border: 1px solid #BFC8FF;
     padding: 0.1cm;
-    background-color: darkblue;
+    background-color: orange;
     text-align: left;
+	font-family:  Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace"
 }
